[tool.poetry]
name = "repl_nix_NexusFlow"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
jwt = "^1.3.1"
SQLAlchemy = "^2.0.6"
Werkzeug = "^2.2.3"
Flask = "^2.2.5"
Flask-SQLAlchemy = "^3.0.3"
Flask-Htmldoom = "^0.2.1"
Flask-Admin = "^1.6.1"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
